# cli-task-hub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  dev.sh  electron-builder.config.js  node_modules  package-lock.json  package.json  preload.js  server.js  tray.js
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  MIGRATION-PLAN.md  TAURI-PORT.md  terminal.md
lib/: configdb.js  datadb.js  datadir.js  db.js  github.js  jira.js  logdb.js  logger.js  poller.js  usage.js  webhook-forwarder.js
main/: app-menu.js  icons.js  menu.js  notifications.js  server-supervisor.js  terminals.js  updater.js  usage-image.js  usage.js  window.js
public/: index.html
public/css/: components.css  layout.css
public/js/: app.js  commit.js  diff.js  fonts.js  icons.js  sidebar.js  split.js  store.js  terminal.js  theme.js  util.js  viewer.js
public/js/views/: cards.js  dashboard.js  git-tab.js  git.js  jira.js  logs.js  modal.js  project.js  settings.js  usage-widget.js
scripts/: afterPack.js  build-sidecar.sh  build-tauri-local.sh  build.js  gen-icon.js  gen-tray-icon.js  gen-tray-icon.mjs
src-tauri/: Cargo.toml  bridge.js  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: avatars.rs  commands.rs  glass.rs  lib.rs  menu.rs  notify.rs  terminals.rs  tray.rs  usage_image.rs  viewer.rs  webview_menu.rs
src/main/app/: const.js  main.js
src/main/ipc/: system.js  terminals.js
src/main/menu/: app-menu.js
src/main/native/: git-client.js  icons.js  notifications.js  usage.js
src/main/server/: supervisor.js
src/main/tray/: menu.js
src/main/windows/: window.js
src/preload/: index.js
src/renderer/: app.js  index.html
src/renderer/components/: activity-toast.js  cards.js  commit.js  content-tabs.js  diff.js  editor.js  find.js  git.js  history.js  menu.js  modal.js  sidebar.js  split.js  terminal.js  toast.js  viewer.js  wcv-shim.js  workflow.js
src/renderer/css/: components.css  layout.css  pages.css  tokens.css  viewer.css
src/renderer/lib/: agent-activity.mjs  avatars.js  diff-parse.mjs  git-clients.js  git-graph.mjs  highlight.mjs  icons.js  monaco-xcode-theme.mjs  terminal-tail.mjs  util.js  workflow.mjs
src/renderer/pages/: dashboard.js  git-tab.js  jira.js  logs.js  project.js  scrumboard.js  settings.js  tasks.js
src/renderer/services/: analyzer.js  api.js  fonts.js  tasks.js  theme.js
src/renderer/stores/: store.js
src/server/: app.js  logger.js
src/server/database/: configdb.js  datadb.js  datadir.js  db.js  logdb.js  open-db.js
src/server/repositories/: github.js  jira-rest.js  jira.js  usage.js
src/server/routes/: config.js  file.js  git.js  helpers.js  jira.js  logs.js  projects.js  prs.js  sse.js  system.js
src/server/services/: agent-hooks.js  cli-analyze.js  cli-tools.js  poller.js  sync.js  version-script.js  webhook-forwarder.js
src/shared/: channels.js  constants.mjs  jira-keys.mjs  routes.mjs
test/: agent-activity.test.js  agent-hooks.test.js  api.test.js  cli-analyze.test.js  cli-tools.test.js  contracts.test.js  diff-parse.test.js  extract-jira-keys.test.js  git-client.test.js  git-graph.test.js  highlight.test.js  jira-keys.test.js  merge-automation.test.js  poller.test.js  review-category.test.js  terminal-tail.test.js  workflow.test.js
