[package]
name = "taskhub"
version = "1.0.0"
description = "Track Jira tickets and GitHub PRs from your Mac menu bar"
authors = ["alexcding"]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `unstable` enables multiwebview (multiple child webviews in one window) — required for the
# embedded GitHub/Jira viewer (one child WKWebview per PR/Jira tab, positioned over a shim div).
tauri = { version = "2.11.3", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
portable-pty = "0.9.0"
sysinfo = "0.36.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["time"] }
ab_glyph = "0.2.32"

# macOS-only: read WKWebView title/URL/nav-state from the embedded viewer (typed objc2 bindings,
# versions matched to what Tauri/wry already pull). Used by viewer.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-web-kit = "0.3"
